# agarwalai

./: .gitignore  README.md
ai_agents_project/: readme
ai_agents_project/agno_agents/: agent_team.py  agent_with_knowledge.py  agent_with_tools.py  basic_agent.py  readme  requirements.txt
ai_agents_project/constitution_chat_agent/: README.md  chat_agent.py  requirements.txt
ai_agents_project/customer_support_ai_agent/: README.MD  README.md  chat_agent.py  email_agent.py  output.md  requirements.txt
ai_agents_project/customer_support_ai_agent/knowledge_base/: category.json  sentiment.json
ai_agents_project/mechanic_agent_hub/: README.md  pyproject.toml
ai_agents_project/mechanic_agent_hub/src/mechanic_agent_hub/: main.py
ai_agents_project/mechanic_agent_hub/src/mechanic_agent_hub/crews/jeep_wrangler_2017/: jeep_wrangler_2017.py
ai_agents_project/mechanic_agent_hub/src/mechanic_agent_hub/crews/jeep_wrangler_2017/config/: agents.yaml  tasks.yaml
ai_agents_project/mechanic_agent_hub/src/mechanic_agent_hub/crews/toyota_camry_2020/: toyota_camry_2020.py
ai_agents_project/minesweeper/: minesweeper.py  readme
ai_agents_project/my_first_ai_agent/: agent.py  readme  test_setup.py
ai_agents_project/reasoning_agent/: README.md  requirements.txt  trello_agent.py
ai_agents_project/simple_conv_agent/: agent.py  user.py
ai_agents_project/sql_query_agent/: README.md  db_agent.py  examples.md  requirements.txt
ai_agents_project/tictactoe/: readme  runner.py  tictactoe.py
